--- a/my-gallery/package.json
+++ b/my-gallery/package.json
@@ -13,7 +13,8 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "expo-image-picker": "~14.0.1"
+    "expo-image-picker": "~14.0.1",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
